chore: detect existing wrapper and replace by content

--- a/install
+++ b/install
@@ -109,6 +109,11 @@ function maybe_add_wrapper() {
   local startMarker="# >>> goto init >>>"
   local endMarker="# <<< goto init <<<"
 
+  if grep -qs 'command to --print-path' "$rc_file" 2>/dev/null; then
+    printf 'Shell wrapper already present in %s; leaving as-is.\n' "$rc_file"
+    return
+  fi
+
   if $FORCE || prompt_yes "Add shell wrapper to ${rc_file}? [y/N]: "; then
     mkdir -p "$(dirname "$rc_file")"
     [ -f "$rc_file" ] || touch "$rc_file"
@@ -122,6 +127,8 @@ function maybe_add_wrapper() {
 
     if grep -q "$startMarker" "$rc_file"; then
       perl -0777 -pe "s|$startMarker.*?$endMarker|$escapedSnippet|s" "$rc_file" > "$tempFile"
+    elif grep -q 'command to --print-path' "$rc_file"; then
+      perl -0777 -pe "s|to\(\)\s*\{[^\}]*command to --print-path.*?\}\s*|$escapedSnippet|s" "$rc_file" > "$tempFile"
     else
       cat "$rc_file" > "$tempFile"
       printf '\n%s\n' "$snippet" >> "$tempFile"
