chore: skip adding rc hook if existing source is present

--- a/install
+++ b/install
@@ -177,6 +177,17 @@ function maybe_add_wrapper() {
 
     local startMarker="# >>> goto init >>>"
     local endMarker="# <<< goto init <<<"
+    local escapedPath
+    escapedPath="$(printf '%s\n' "$WRAPPER_PATH" | sed -e 's/[\\/&]/\\&/g')"
+
+    local marker_present=false
+    local path_present=false
+
+    if grep -q "$startMarker" "$rc_file"; then
+        marker_present=true
+    elif grep -q "$escapedPath" "$rc_file"; then
+        path_present=true
+    fi
 
     if $FORCE || prompt_yes "Add shell wrapper to ${rc_file}? [y/N]: "; then
         mkdir -p "$(dirname "$rc_file")"
@@ -204,12 +215,17 @@ EOSNIPPET
         tempFile="$(mktemp)"
         local blockAction="added"
 
-        if grep -q "$startMarker" "$rc_file"; then
+        if $marker_present; then
             perl -0777 -pe "s|$startMarker.*?$endMarker|$escapedSnippet|s" "$rc_file" > "$tempFile"
             blockAction="updated"
         elif grep -q 'command to --print-path' "$rc_file"; then
             perl -0777 -pe "s|to\(\)\s*\{[^\}]*command to --print-path.*?\}\s*|$escapedSnippet|s" "$rc_file" > "$tempFile"
             blockAction="updated"
+        elif $path_present; then
+            # Already sourcing the wrapper without our markers; leave as-is.
+            printf 'Shell wrapper already present in %s (detected existing source); leaving untouched.\n' "$rc_file"
+            rm "$tempFile"
+            return
         else
             cat "$rc_file" > "$tempFile"
             printf '\n%s\n' "$snippet" >> "$tempFile"
