--- a/install
+++ b/install
@@ -241,10 +241,27 @@ EOSNIPPET
         local blockAction="added"
 
         if $marker_present; then
-            perl -0777 -pe "s|$startMarker.*?$endMarker|$escapedSnippet|s" "$rc_file" > "$tempFile"
+            SNIPPET="$snippet" python3 - "$rc_file" "$startMarker" "$endMarker" >"$tempFile" <<'PY'
+import sys, re, pathlib, os
+path, start, end = sys.argv[1:]
+snippet = os.environ["SNIPPET"]
+text = pathlib.Path(path).read_text()
+pattern = re.compile(re.escape(start) + r".*?" + re.escape(end), re.S)
+new = pattern.sub(snippet, text)
+sys.stdout.write(new)
+PY
             blockAction="updated"
         elif grep -q 'command to --print-path' "$rc_file"; then
-            perl -0777 -pe "s|to\(\)\s*\{[^\}]*command to --print-path.*?\}\s*|$escapedSnippet|s" "$rc_file" > "$tempFile"
+            # legacy block; replace whole function with new snippet
+            SNIPPET="$snippet" python3 - "$rc_file" "$startMarker" "$endMarker" >"$tempFile" <<'PY'
+import sys, pathlib, os
+path = sys.argv[1]
+snippet = os.environ["SNIPPET"]
+text = pathlib.Path(path).read_text()
+text = text + ("\n" if not text.endswith("\n") else "")
+text += snippet + "\n"
+sys.stdout.write(text)
+PY
             blockAction="updated"
         elif $path_present; then
             # Already sourcing the wrapper without our markers; leave as-is.
