--- a/install
+++ b/install
@@ -229,12 +229,20 @@ function maybe_add_wrapper() {
     done
 
     if ! $marker_present; then
+        # Detect existing wrapper/completion sourcing even if the marker comments were removed.
+        local -a detect_patterns
+        detect_patterns+=("$escapedPath" "$escapedComp")
+        detect_patterns+=("zsh/plugins/goto/goto.zsh" "zsh/completions/_to")
+        detect_patterns+=("GOTO_FUNC_PATH" "GOTO_COMP_DIR")
+
         for cand in "${rc_candidates[@]}"; do
             [ -f "$cand" ] || continue
-            if grep -q "$escapedPath" "$cand" || grep -q "$escapedComp" "$cand"; then
-                path_present=true
-                break
-            fi
+            for pat in "${detect_patterns[@]}"; do
+                if grep -q "$pat" "$cand"; then
+                    path_present=true
+                    break 2
+                fi
+            done
         done
     fi
 
