--- a/install
+++ b/install
@@ -99,23 +99,13 @@ function wrapper_snippet() {
 to() {
 
   local target_present=false
-  local arg
-  local after_dashes=false
+  local classify
 
-  for arg in "$@"; do
+  classify="$(command to --classify "$@" 2>/dev/null || true)"
 
-    if [ "$arg" = "--" ]; then
-      after_dashes=true
-      continue
-    fi
-
-    if ! $after_dashes && [ "${arg#-}" != "$arg" ]; then
-      continue
-    fi
-
+  if [ "$classify" = "jump" ]; then
     target_present=true
-    break
-  done
+  fi
 
   if ! $target_present; then
 
