Ignore goto wrapper when detecting legacy to

--- a/install
+++ b/install
@@ -385,12 +385,14 @@ PY
     fi
 }
 
-LEGACY_OUT="$(zsh -lc 'whence -w to' 2>/dev/null || true)"
-if printf '%s' "$LEGACY_OUT" | grep -q "function"; then
-  warn "found existing Zsh function 'to' (likely from to-zsh) in your shell environment."
-  warn "If you want to remove it first, run the to-zsh uninstall script (e.g., ~/.config/zsh/plugins/to-zsh/uninstall) or remove the function from your shell config."
-  if ! $FORCE && ! prompt_yes "Proceed anyway? [y/N]: "; then
-    die "aborting to avoid conflict with existing 'to'. Run with --force to override."
+LEGACY_OUT="$(zsh -lc 'typeset -f to' 2>/dev/null || true)"
+if [ -n "$LEGACY_OUT" ]; then
+  if ! printf '%s' "$LEGACY_OUT" | grep -q "command to --__classify"; then
+    warn "found existing Zsh function 'to' (likely from to-zsh) in your shell environment."
+    warn "If you want to remove it first, run the to-zsh uninstall script (e.g., ~/.config/zsh/plugins/to-zsh/uninstall) or remove the function from your shell config."
+    if ! $FORCE && ! prompt_yes "Proceed anyway? [y/N]: "; then
+      die "aborting to avoid conflict with existing 'to'. Run with --force to override."
+    fi
   fi
 fi
 
